# torch_toolbox

./: .gitignore  .libcst.codemod.yaml  OBD.py  README.md  arg_parse.py  classic_influence_function.py  clustering.py  configuration.py  conjugate_gradient.py  cuda_process_task_queue.py  cuda_task_queue.py  data.py  data_structure.py  dataset.py  device.py  gradient.py  hessian_vector_product.py  hessian_vector_product2.py  hessian_vector_product3.py  hyper_gradient_analyzer.py  hyper_gradient_trainer.py  hyper_parameter.py  inference.py  influence_function.py  inverse_hessian_vector_product.py  log.py  loss.py  model.py  model_factory.py  model_loss.py  model_util.py  normalization.py  per_sample_gradient.py  phase.py  process_task_queue.py  prune.py  pyproject.toml  regularization.py  reproducible_env.py  requirements.txt  (+9 more)
algorithm/: hessian_vector_product.py  per_sample_gradient.py  steepest_descent.py
algorithm/influence_function/: classic_influence_function.py  hyper_gradient_trainer.py
cyy_naive_pytorch_lib/: arg_parse.py  basic_trainer.py  callback.py  config.py  configuration.py  dataset.py  dataset_collection.py  default_config.py  device.py  gradient.py  hook.py  hyper_parameter.py  inference.py  local_types.py  metric.py  ml_type.py  ml_types.py  model_executor.py  model_factory.py  model_loss.py  model_util.py  model_with_loss.py  reproducible_env.py  tensor.py  trainer.py  visualization.py
cyy_naive_pytorch_lib/algorithm/: hessian_vector_product.py  influence_function.py  inverse_hessian_vector_product.py  lr_finder.py  per_sample_gradient.py  prune.py  sample_gradient.py  sample_gradient_callback.py
cyy_naive_pytorch_lib/audio_datasets/: __init__.py  esc50.py  speech_commands_simplified.py
cyy_naive_pytorch_lib/data_structure/: cuda_process_pool.py  cuda_process_task_queue.py  cuda_task_queue.py  synced_tensor_dict.py  synced_tensor_dict_util.py  torch_process_task_queue.py
cyy_naive_pytorch_lib/datasets/: ESC50.py  __init__.py  femnist.py  webank_street_dataset.py
cyy_naive_pytorch_lib/hooks/: add_index_to_dataset.py  gradient_sanitizer.py  learning_rate_hook.py  memory_tracker.py  model_executor_logger.py  save_model.py  trainer_debugger.py
cyy_naive_pytorch_lib/metric_visualizers/: batch_loss_metric_logger.py  loss_metric_logger.py  metric_tensorboard.py  metric_visdom.py  metric_visualizer.py  performance_metric_logger.py  validation_metric_logger.py
cyy_naive_pytorch_lib/metrics/: acc_metric.py  loss_metric.py  metric.py  metric_visualizer.py  performance_metric.py  prob_metric.py  validation_metric.py
cyy_naive_pytorch_lib/models/: densenet.py  dla_simple.py  hubconf.py  lenet.py  lstm.py  m5.py  rnn.py
cyy_naive_pytorch_lib/pipelines/: text_field.py
cyy_naive_pytorch_lib/test/: test_dataset.py  test_inference.py  test_training.py
cyy_torch_toolbox/: __init__.py  a.txt  b.txt  classification_inferencer.py  config.py  config_file.py  dataloader.py  dataset.py  dataset_collection.py  dataset_repository.py  dataset_util.py  default_config.py  dependency.py  device.py  executor.py  hook.py  hook_config.py  hyper_parameter.py  inference.py  inferencer.py  ml_type.py  model_executor.py  model_executor_base.py  model_factory.py  model_util.py  model_with_loss.py  reflection.py  reproducible_env.py  tensor.py  trainer.py  typing.py  word_vector.py
data_structure/: cuda_process_task_queue.py  synced_tensor_dict_util.py
datasets/: webank_street_dataset.py
influence_function/: arg_parse.py  args.py  hyper_gradient_trainer.py
models/: densenet.py  densenet2.py
network/: densenet.py  lenet.py
shapely_value/: shapely_value.py
test/: __init__.py  test_cuda_process_task_queue.py  test_cuda_task_queue.py  test_dataset.py  test_hessian_vector_product.py  test_hessian_vector_product2.py  test_hyper_parameter.py  test_per_sample_gradient.py  test_process_task_queue.py  test_sampler.py  test_synced_tensor_dict_util.py
(+251 files in other folders)
