[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_torch_toolbox"
version = "0.2"
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "torch; platform_system != 'Windows'",
  "hydra-core",
  "omegaconf",
  "torchmetrics",
  "torchvision",
  "datasets",
  "nvidia-ml-py",
  "dill",
  "cyy_naive_lib@git+https://github.com/cyyever/naive_python_lib.git@main",
  "cyy_preprocessing_pipeline@git+https://github.com/cyyever/preprocessing_pipeline.git@main",
]

[tool.setuptools.package-data]
cyy_torch_toolbox = ["py.typed"]

[project.urls]
Repository = "https://github.com/cyyever/torch_toolbox"

[tool.ruff]
target-version = "py312"
src = ["cyy_torch_toolbox"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = ["E501","F403"]
