[project]
name = "cyy_torch_toolbox"
version = "0.2"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "BSD License" }
authors = [
  { name = "cyy", email = "cyyever@outlook.com" },
]
classifiers = ["Programming Language :: Python"]
dependencies = [
  "cyy_naive_lib@git+https://github.com/cyyever/naive_python_lib.git@main",
  "cyy_preprocessing_pipeline@git+https://github.com/cyyever/preprocessing_pipeline.git@main",
  "datasets",
  "dill",
  "hydra-core",
  "nvidia-ml-py",
  "omegaconf",
  "torch>=2.8",
  "torchmetrics",
  "torchvision",
]

[project.urls]
Repository = "https://github.com/cyyever/torch_toolbox"

[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
src = ["cyy_torch_toolbox"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  "RUF",
  "RET",
  "PIE"
]
ignore = ["E501", "F403", "RUF017"]

[tool.setuptools.package-data]
cyy_torch_toolbox = ["py.typed"]
